fix:update record

--- a/website/templates/update_record.html
+++ b/website/templates/update_record.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="col-md-6 offset-md-3">
-<h1>Add Record</h1>
+<h1>Update Record</h1>
 <br/>
 
 <form method="POST">
@@ -12,6 +12,7 @@
 
 <br/>
   <button type="submit" class="btn btn-secondary">Update Record</button>
+  <a href="{% url 'home' %}" class="btn btn-secondary">Back</a>
 
 </form>
 
